--- a/index.html
+++ b/index.html
@@ -51,28 +51,50 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/team img1.jpg" alt="" />
+            <img
+              src="images/team img1.jpg "
+              width="264px"
+              alt="photo Product Designer"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/team img2.jpg" alt="" />
+            <img
+              src="images/team img2.jpg"
+              width="264px"
+              alt="photo Frontend Developer"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/team img3.jpg" alt="" />
+            <img
+              src="images/team img3.jpg"
+              width="264px"
+              alt="photo Marketing"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/team img4.jpg" alt="" />
+            <img
+              src="images/team img4.jpg"
+              width="264px"
+              alt="photo UI Designer"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="WebStudio"></a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
