--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </section>
     </main>
     <footer>
-      <a href="WebStudio"></a>
+      <a href="">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
