--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
+      <a href="./infex.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-        <a href="">info@devstudio.com</a>
-        <a href="">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="">info@devstudio.com</a></li>
+          <li><a href="">+11 (000) 111-11-11</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -25,7 +27,7 @@
       </section>
 
       <section>
-        <h2></h2>
+        <h2 hidden></h2>
         <h3>Strategy</h3>
         <p>
           Our goal is to identify the business problem to walk away with the
@@ -52,8 +54,8 @@
         <ul>
           <li>
             <img
-              src="images/team img1.jpg "
-              width="264px"
+              src="images/team_img1.jpg "
+              width="264"
               alt="photo Product Designer"
             />
             <h3>Mark Guerrero</h3>
@@ -61,26 +63,22 @@
           </li>
           <li>
             <img
-              src="images/team img2.jpg"
-              width="264px"
+              src="images/team_img2.jpg"
+              width="264"
               alt="photo Frontend Developer"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="images/team img3.jpg"
-              width="264px"
-              alt="photo Marketing"
-            />
+            <img src="images/team_img3.jpg" width="264" alt="photo Marketing" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="images/team img4.jpg"
-              width="264px"
+              src="images/team_img4.jpg"
+              width="264"
               alt="photo UI Designer"
             />
             <h3>Daniel Wilson</h3>
@@ -90,7 +88,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./infex.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
