--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
   </head>
   <body>
     <header>
-      <a href="./infex.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
         <ul>
-          <li><a href="">info@devstudio.com</a></li>
-          <li><a href="">+11 (000) 111-11-11</a></li>
+          <li>
+            <address>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </address>
+          </li>
+          <li>
+            <address>
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </address>
+          </li>
         </ul>
       </nav>
     </header>
@@ -27,27 +36,36 @@
       </section>
 
       <section>
-        <h2 hidden></h2>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
@@ -88,7 +106,7 @@
       </section>
     </main>
     <footer>
-      <a href="./infex.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
