--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
         <ul>
           <li>
             <img
-              src="images/team_img1.jpg "
-              width="264"
+              src="./images/team_img1.jpg"
               alt="photo Product Designer"
+              width="264"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="images/team_img2.jpg"
+              src="./images/team_img2.jpg"
               width="264"
               alt="photo Frontend Developer"
             />
@@ -84,13 +84,17 @@
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/team_img3.jpg" width="264" alt="photo Marketing" />
+            <img
+              src="./images/team_img2.jpg"
+              width="264"
+              alt="photo Marketing"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="images/team_img4.jpg"
+              src="./images/team_img4.jpg"
               width="264"
               alt="photo UI Designer"
             />
